--- a/scripts/config
+++ b/scripts/config
@@ -1,3 +1,4 @@
 # 配置环境，目前适配Ubuntu系统
 # 获取gtest库
-sudo apt-get install libgtest-dev && sudo apt install gdb
+#!/bin/bash
+sudo apt-get install libgtest-dev && sudo apt install gdb && sudo apt-get install cmake && sudo apt-get install g++
